--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,7 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+opencv-python==4.12.0.88
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -117,6 +118,8 @@ scikit-learn==1.6.1
 scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+setproctitle==1.3.7
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
@@ -131,6 +134,7 @@ tinycss2==1.4.0
 tomli==2.2.1
 torch==2.6.0
 torch-tb-profiler==0.4.3
+torchinfo==1.8.0
 torchmetrics==1.7.1
 torchsummary==1.5.1
 torchvision==0.21.0
