--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.pyc
-.gitignore
 src/utils/wrappers.py
 src/model/Predictors.py
 venv
-src/experiments/01_OC_AE_XL/
-src/experiments/01_Holistic_Predictor_XL/
-src/experiments/*/checkpoints/*.pth
+src/experiments/*
+!src/experiments/01_Holistic_Predictor_XL
